--- a/exampleSite/data/de/content.yaml
+++ b/exampleSite/data/de/content.yaml
@@ -1,7 +1,7 @@
 BasicInfo:
   FirstName: Inês
   LastName: Almeida
-  Photo: img/avatar.jpg
+  Photo: assets/avatar.jpg
   Contacts:
     - Icon: fas fa-phone
       Info: +44 123 456 789
